forgot password & executive, customer details support added

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'vendor/fontello-2f186091/css/fontello.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
-    {% if user.is_authenticated and user.is_teacher %}
-      <link rel="stylesheet" type="text/css" href="{% static 'css/teachers.css' %}">
-    {% else %}
       <link rel="stylesheet" type="text/css" href="{% static 'css/students.css' %}">
-    {% endif %}
   </head>
   <body>
     <div class="container my-4">
@@ -25,11 +21,8 @@
                 <a href="{% url 'home' %}">
                   The Water Company
                   {% if user.is_authenticated %}
-                    {% if user.is_teacher %}
-                      <span class="icon-feather" data-toggle="tooltip" data-placement="right" title="Teacher profile"></span>
-                    {% else %}
+                    
                       <span class="icon-graduation-cap" data-toggle="tooltip" data-placement="right" title="Student profile"></span>
-                    {% endif %}
                   {% endif %}
                 </a>
               </h1>
@@ -58,7 +51,7 @@
             </div>
           </div>
           <footer>
-            <a href="#">1</a>
+            <a href="{% url 'home' %}">Home</a>
             /
             <a href="#">2</a>
             /
