--- a/templates/registration/Password_reset.html
+++ b/templates/registration/Password_reset.html
@@ -13,8 +13,9 @@
   {% endif %}
   <div>
     <div class="col-md-8 col-sm-10 col-12">
-      <h1>Log in</h1>
-      <form method="post" novalidate>
+      <h1>Reset your Password</h1>
+
+      <form action="{% url 'password_reset' %}" method="post">
         {% csrf_token %}
         <table>
         {% for field in form %}
@@ -23,11 +24,8 @@
           </tr>
         {% endfor %}
         </table>
-        <button type="submit" class="btn btn-primary">Log in</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
-    <br/>
-    Forgot password? Reset it <a href="{% url 'password_reset' %}">here</a><br/>
-    Don't have an account yet? Sign up <a href="{% url 'signup' %}">here!</a>
   </div>
 {% endblock %}
