--- a/templates/registration/details.html
+++ b/templates/registration/details.html
@@ -4,12 +4,13 @@
 {% block content %}
   <div class="row">
     <div class="col-md-8 col-sm-10 col-12">
-      <h2>Enter details {{ user_type }}</h2>
+      <h2>My Profile</h2><br>
       <form method="post" enctype="multipart/form-data" novalidate>
         {% csrf_token %}
         <input type="hidden" name="next" value="{{ next }}">
-        {{ form }}
-        <button type="submit" class="btn btn-success">Sign up</button>
+        <b>Email:</b><span style="padding-left: 31px;">{{user.email}}</span><br>
+        <table>{{ form }}</table>
+        <button type="submit" class="btn btn-success">Submit</button>
       </form>
     </div>
   </div>
