--- a/templates/registration/signup_form.html
+++ b/templates/registration/signup_form.html
@@ -2,15 +2,22 @@
 
 
 {% block content %}
-  <div class="row">
+  <div>
     <div class="col-md-8 col-sm-10 col-12">
-      <h2>Sign up as a {{ user_type }}</h2>
+      <h1>Sign up!</h1>
       <form method="post" novalidate>
         {% csrf_token %}
-        <input type="hidden" name="next" value="{{ next }}">
-        {{ form }}
+        <table>
+        {% for field in form %}
+          <tr>
+            <td style="font-weight: 500;">{{ field.label_tag }}</td><td> {{ field }}</td><td>{{ field.errors }}</td>
+          </tr>
+        {% endfor %}
+        </table>
         <button type="submit" class="btn btn-success">Sign up</button>
       </form>
     </div>
+    <br/>
+    Already have an account? Login <a href="{% url 'login' %}">here!</a>
   </div>
 {% endblock %}
