--- a/userAuth/templates/userAuth/executives/home.html
+++ b/userAuth/templates/userAuth/executives/home.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
-Hi Exec!
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<h3>Hi {{user.username}}!</h3>
+<h6>Executive site</h6>
+<img src='/media/{{user.executive.photo}}' onerror="if (this.src != '/media/default.jpg') this.src = '/media/default.jpg';" width="200px" height="200px"><br>
+<a href="{% url 'executive:viewprofile' %}">View/Edit profile picture</a>
+<h4>Complaint(s) assigned: {{user.executive.complaints_queue}}</h4>
+{% endblock %}
