--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -13,6 +13,7 @@
   {% endif %}
   <div>
     <div class="col-md-8 col-sm-10 col-12">
+      {% if not user.is_authenticated %}
       <h1>Log in</h1>
       <form method="post" novalidate>
         {% csrf_token %}
@@ -29,5 +30,10 @@
     <br/>
     Forgot password? Reset it <a href="{% url 'password_reset' %}">here</a><br/>
     Don't have an account yet? Sign up <a href="{% url 'signup' %}">here!</a>
+    {% else %}
+    <h1>Lost?</h1>
+    Go big or Go <a href="{% url 'home' %}">home</a>.
+    </div>
+    {% endif %}
   </div>
 {% endblock %}
