Delete and View all agents for exec beta

--- a/templates/registration/agent_edit.html
+++ b/templates/registration/agent_edit.html
@@ -14,7 +14,7 @@
           </tr>
         {% endfor %}
         </table>
-        <button type="submit" class="btn btn-success">Sign up</button>
+        <a href='/'><button type="submit" class="btn btn-success">Sign up</button></a>
       </form>
     </div>
     <br/>
