Shopping and Order Beta

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,8 +52,10 @@
           </div>
           <footer>
             <a href="{% url 'home' %}">Home</a>
+            {% if user.user_type == 1 %}
             /
-            <a href="#">2</a>
+            <a href="{% url 'shop:product_list' %}">Shop</a>
+            {% endif %}
             /
             <a href="#">3</a>
           </footer>
