Customer order experience enhanced

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
             <a href="{% url 'shop:product_list' %}">Shop</a>
             {% endif %}
             /
-            <a href="#">3</a>
+            <a href="{% url 'cart:cart_detail' %}">Cart</a>
           </footer>
         </div>
       </div>
