--- a/userAuth/templates/userAuth/customers/home.html
+++ b/userAuth/templates/userAuth/customers/home.html
@@ -2,5 +2,6 @@
 {% block content %}
 <h3>Hi {{user.username}}!</h3>
 <img src='media/{{user.customer.photo}}' onerror="if (this.src != 'media/default.jpg') this.src = 'media/default.jpg';" width="200px" height="200px"><br>
-<a href="{% url 'customer:editprofile' %}">View/Edit profile</a>
+<a href="{% url 'customer:editprofile' %}">View/Edit profile</a><br/>
+<a href="{% url 'customer:myorders' %}">My Orders</a>
 {% endblock %}
