Stock limit added to orders

--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -23,8 +23,8 @@
                             <p class="text-muted">Rs. {{ product.price }}</p>
                             <form action="{% url "cart:cart_add" product.id %}" method="post">
                                 {% csrf_token %}
-                                {{ cart_product_form }}
-                                <input type="submit" value="add to cart" class="btn btn-primary">
+                                Qty: <input type="number" name="quantity" min="1" max="{{product.stock}}" value="1">
+                                <input type="submit" value="Add to cart" class="btn btn-primary">
                             </form>
                             <p>{{ product.description|safe|linebreaksbr }}</p>
                         </div>
