--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -31,15 +31,10 @@
                             </td>
                             <td>{{ product.name }}</td>
                             <td>
-                                <form action="{% url "cart:cart_add" product.id %}" method="post">
-                                    {% csrf_token %}
-                                    {{ item.update_quantity_form.quantity }}
-                                    {{ item.update_quantity_form.update }}
-                                    <input type="submit" value="Update" class="btn btn-success">
-                                </form>
+                                {{item.quantity}}
                             </td>
                             <td>
-                                <a href="{% url "cart:cart_remove" product.id %}">Remove</a>
+                                <a href="{% url "cart:cart_remove" product.id %}">Remove</a><br/>
                             </td>
                             <td>Rs. {{ item.price }}</td>
                             <td>Rs. {{ item.total_price }}</td>
