--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" type="text/css" href="{% static 'css/students.css' %}">
   </head>
   <body>
-    <div class="container my-4">
+    <div class="container my-4 col-12">
       <div class="row justify-content-center">
         <div class="col-md-10 col-sm-12">
           <div class="row">
@@ -55,9 +55,9 @@
             {% if user.user_type == 1 %}
             /
             <a href="{% url 'shop:product_list' %}">Shop</a>
-            {% endif %}
             /
             <a href="{% url 'cart:cart_detail' %}">Cart</a>
+            {% endif %}
           </footer>
         </div>
       </div>
