--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load static %}
 {% block title %}
     {% if category %}{{ category.name }} {% else %} Products {% endif %}
 {% endblock %}
@@ -15,7 +14,7 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="col-md-6 text-right">
-                            <img src="{% if product.image %} {{ product.image.url }} {% else %} {% static 'img/default.jpg' %} {% endif %}" alt="..." style="height: 170px; width: auto">
+                            <img src='/media/{{product.image}}' onerror="if (this.src != '/media/product/default.jpg') this.src = '/media/product/default.jpg';" alt=".." style="height: 170px; width: 228px;">
                         </div>
                         <div class="col-md-6" style="padding-left: 20px">
                             <h3>{{ product.name }}</h3>
