--- a/shop/templates/shop/product/list.html
+++ b/shop/templates/shop/product/list.html
@@ -14,10 +14,10 @@
               <div class="row">
                   {% for product in products %}
                       <div class="col-md-4">
-                        <div class="thumbnail">
+                        <div class="thumbnail"><center>
                             <a href="{{ product.get_absolute_url }}">
-                                <img src="{% if product.image %} {{ product.image.url }} {% else %} {% static 'img/default.jpg' %} {% endif %}" alt="..." style="height: 130px; width: auto">
-                            </a>
+                                <img src='/media/{{product.image}}' onerror="if (this.src != '/media/product/default.jpg') this.src = '/media/product/default.jpg';" alt="..." style="height: 130px; width: 190px;">
+                            </a></center>
                             <div class="caption">
                                 <h3 class="text-center">
                                     <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
