--- a/templates/registration/details_view.html
+++ b/templates/registration/details_view.html
@@ -4,7 +4,7 @@
 {% block content %}
   <div class="row">
     <div class="col-md-8 col-sm-10 col-12">
-      <h1>My Profile</h1><br>
+      <h1>Profile</h1><br>
         <input type="hidden" name="next" value="{{ next }}">
         <b>Email</b><span style="padding-left: 31px;">:{{user.email}}</span><br>
         <table>
@@ -17,5 +17,7 @@
         <br/>
     </div>
   </div>
+    {% if request.user.user_type == 2 %}
     Change your password <a href="{% url 'change_password' %}">here.</a>
+    {% endif %}
 {% endblock %}
