--- a/userAuth/templates/userAuth/executives/all_orders.html
+++ b/userAuth/templates/userAuth/executives/all_orders.html
@@ -34,7 +34,7 @@
             <td class="align-middle">{{ order.get_payment_type_display }}</td>
             <td class="align-middle">Rs.{{ order.get_total_cost }}</td>
             <td class="text-right">
-              {% if order.order_status != '4' %}
+              {% if order.order_status != '4' and order.order_status != 'X'%}
               <a href="{% url 'agent:cancel_order' oid=order.id %}"><button type="submit" class="btn">Cancel Order</button></a>
               {% endif %}
             </td>
