--- a/userAuth/templates/userAuth/executives/prds_list.html
+++ b/userAuth/templates/userAuth/executives/prds_list.html
@@ -26,7 +26,7 @@
         {% for prd in prds %}
           <tr>
             <td class="align-middle">
-              <a href="#">
+              <a href="{% url 'executive:editproduct' pid=prd.id %}">
                 <img src='/media/{{product.image}}' onerror="if (this.src != '/media/product/default.jpg') this.src = '/media/product/default.jpg';" alt=".." style="height: 30px; width: 50px;">
               </a>
             </td>
