--- a/templates/registration/details.html
+++ b/templates/registration/details.html
@@ -16,7 +16,7 @@
           {% endif %}
         {% endfor %}
           <tr>
-            <td style="font-weight: 500;">Area:</td><td><input type="text" maxlength="30" required name="area" id="id_area" disabled="true"></td><td></td>
+            <td style="font-weight: 500;">Area:</td><td><input type="text" maxlength="30" required name="area" id="id_area" readonly></td><td></td>
           </tr>
         </table>
         <button id="submit" type="submit" class="btn btn-success" disabled="true">Sign up</button>
