--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,6 @@
   <h2>Welcome to the Water Company! <span class="icon-emo-happy"></span></h2>
   <p class="lead">
     If you already have an account, go ahead and <a href="{% url 'login' %}">log in</a>. If you are new to this website, get started
-    by creating an <a href="{% url 'signup' %}">account</a>. 
+    by creating an <a href="{% url 'signup' %}">account</a>. If you're agent you can partner with us <a href="{% url 'partner_with_us' %}">here.</a>
   </p>
 {% endblock %}
