--- a/customers/templates/customers/items_list.html
+++ b/customers/templates/customers/items_list.html
@@ -41,4 +41,11 @@
       </tbody>
     </table>
   </div>
+  <br/>
+  <div class="card">
+    <h4 class="mb-3">Track</h4> 
+    <iframe src="{% url 'customer:order_track' oid=items.first.order.id %}" height="500px">
+      <p>Your browser does not support iframes.</p>
+    </iframe>
+  </div>
 {% endblock %}
