--- a/executives/templates/executives/all_orders.html
+++ b/executives/templates/executives/all_orders.html
@@ -18,6 +18,7 @@
           <th>Agent</th>
           <th>Status</th>
           <th>Payment Type</th>
+          <th>Time of Delivery</th>
           <th>Total</th>
           <th></th>
         </tr>
@@ -32,6 +33,7 @@
             <td class="align-middle"><a href="{% url 'executive:viewagentprofile' aid=order.agent.id %}">{{ order.agent }}</a></td>
             <td class="align-middle">{{ order.get_order_status_display }}</td>
             <td class="align-middle">{{ order.get_payment_type_display }}</td>
+            <td class="align-middle">{{ order.preferred_time }}</td>
             <td class="align-middle">Rs.{{ order.get_total_cost }}</td>
             <td class="text-right">
               {% if order.order_status != '4' and order.order_status != 'X'%}
