--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
               {% if user.is_authenticated %}
                 <p class="pt-3">Logged in as <strong>{{ user.username }}</strong>. <a href="{% url 'logout' %}">Log out</a>.</p>
               {% else %}
+                <a href="{% url 'partner_with_us' %}" class="btn btn-light" role="button">Partner with us</a>
                 <a href="{% url 'login' %}" class="btn btn-light" role="button">Log in</a>
                 <a href="{% url 'signup' %}" class="btn btn-primary" role="button">Sign up</a>
               {% endif %}
