Receipt generation and Party Orders added

--- a/executives/templates/executives/home.html
+++ b/executives/templates/executives/home.html
@@ -10,4 +10,5 @@
 <a href="{% url 'executive:product' %}">Products</a><br/>
 <a href="{% url 'executive:category' %}">Categories</a><br/>
 <a href="{% url 'executive:all_orders' %}">All orders</a><br/>
+<a href="{% url 'executive:all_party_orders' %}">Party Orders</a><br/>
 {% endblock %}
