--- a/executives/templates/executives/home.html
+++ b/executives/templates/executives/home.html
@@ -9,6 +9,7 @@
 <a href="{% url 'executive:agentslist' %}">View agents</a><br/>
 <a href="{% url 'executive:product' %}">Products</a><br/>
 <a href="{% url 'executive:category' %}">Categories</a><br/>
+<a href="{% url 'executive:subscriptions' %}">Subscriptions</a><br/>
 <a href="{% url 'executive:all_orders' %}">All orders</a><br/>
 <a href="{% url 'executive:all_party_orders' %}">Party Orders</a><br/>
 {% endblock %}
