--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,10 @@
             <a href="{% url 'cart:cart_detail' %}">Cart</a>
             /
             <a href="{% url 'customer:support' %}">Support</a>
+            /
+            <a href="{% url 'customer:party_order' %}">Party Order</a>
+            /
+            <a href="{% url 'customer:subscriptions' %}">Subscribe</a>
             {% endif %}<br/>
           </div>
           <div class="card mb-3">
