--- a/customers/templates/customers/home.html
+++ b/customers/templates/customers/home.html
@@ -3,5 +3,6 @@
 <h3>Hi {{user.username}}!</h3>
 <img src='{{ MEDIA_URL}}{{user.customer.photo}}' onerror="if (this.src != '{{ MEDIA_URL}}default.jpg') this.src = '{{ MEDIA_URL}}default.jpg';" width="200px" height="200px"><br>
 <a href="{% url 'customer:editprofile' %}">View/Edit profile</a><br/>
-<a href="{% url 'customer:myorders' %}">My Orders</a>
+<a href="{% url 'customer:myorders' %}">My Orders</a><br/>
+<a href="{% url 'customer:my_subscriptions' %}">My Subscriptions</a>
 {% endblock %}
