--- a/executives/templates/executives/home.html
+++ b/executives/templates/executives/home.html
@@ -12,4 +12,6 @@
 <a href="{% url 'executive:subscriptions' %}">Subscriptions</a><br/>
 <a href="{% url 'executive:all_orders' %}">All orders</a><br/>
 <a href="{% url 'executive:all_party_orders' %}">Party Orders</a><br/>
+<a href="{% url 'executive:notify_agent' %}">Notify Agent</a><br/>
+
 {% endblock %}
