--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,8 @@
           <div>
             <br/>
             <a href="{% url 'home' %}">Home</a>
+            /
+            <a href="{% url 'feedback:feedback' %}">Feedback</a>
             {% if user.user_type == 1 %}
             /
             <a href="{% url 'shop:product_list' %}">Shop</a>
