Executive UI integrated.

--- a/executives/templates/executives/support_list.html
+++ b/executives/templates/executives/support_list.html
@@ -1,4 +1,4 @@
-{{% extends 'exec_base.html' %}
+{% extends 'exec_base.html' %}
 {% load static %}
 
 {% block content %}
@@ -28,6 +28,7 @@
                     </div>
                     <!-- ============================================================== -->
                     <!-- end pageheader  -->
+
                     <!-- ============================================================== -->
                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                             <div class="card border-3 border-top border-top-primary">
