--- a/executives/templates/executives/home.html
+++ b/executives/templates/executives/home.html
@@ -60,7 +60,7 @@
                                        <div class="card-body">
                                            <h5 class="text-muted"> Manage </h5>
                                            <div class="metric-value d-inline-block">
-                                               <h1 class="mb-1" id="incRequests">Agents</h1>
+                                               <h1 class="mb-1">Agents</h1>
                                         </div>
                                        </div>
                                     </div>
@@ -157,7 +157,50 @@
                                     </div>
                                 </div>
                             </div>
-                            
+                    <!-- ============================================================== -->
+                    <!-- pie chart  -->
+                    <!-- ============================================================== -->
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                        <div class="card card-figure has-hoverable border-3 border-top border-top-primary">
+                            <h5 class="card-header">Registered Users</h5>
+                            <div class="card-body">
+                                <canvas id="chartjs_pie"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- ============================================================== -->
+                    <!-- end pie chart  -->
+                    <!-- ============================================================== -->
+                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
+                                <div class="card card-figure has-hoverable border-3 border-top border-top-primary">
+                                    <div class="card-body">
+                                        <h5 class="text-muted">Total Orders</h5>
+                                        <div class="metric-value d-inline-block">
+                                            <h1 class="mb-1">{{num_of_orders}}</h1>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
+                                <div class="card card-figure has-hoverable border-3 border-top border-top-primary">
+                                    <div class="card-body">
+                                        <h5 class="text-muted">Total Products</h5>
+                                        <div class="metric-value d-inline-block">
+                                            <h1 class="mb-1">{{num_of_products}}</h1>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
+                                <div class="card card-figure has-hoverable border-3 border-top border-top-primary">
+                                    <div class="card-body">
+                                        <h5 class="text-muted">Total Categories</h5>
+                                        <div class="metric-value d-inline-block">
+                                            <h1 class="mb-1">{{num_of_categories}}</h1>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
 
 {% endblock %}
